--- a/www/arabic.html
+++ b/www/arabic.html
@@ -84,7 +84,7 @@
 </style>
 <!--footer-bg-center.png-->
 </head>
-<body class="tarjome sound" onload="init();" style="overflow:hidden;width:100%;">
+<body class="tarjome_disable sound_disable" onload="init();" style="overflow:hidden;width:100%;">
 <div id="bg-top"></div><div id="bg-bottom"></div>
 <div id="ajax" class="mypreload">
 	<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
@@ -93,7 +93,7 @@
 </div>
 		<div id="warper" >
 				<div id="header">
-					<div id="back-btn" onclick="parent.history.back();"></div>
+					<div id="back-btn" onclick="window.location.href='index.html';"></div>
 					<div id="header-text-2th">عربی در سفر</div>
 					<div class="center"></div>
 				</div>
@@ -171,16 +171,11 @@ $(document).ready(function() {
 	//$('#data_table_filter').css("top",$("#header").height());
 
 	
-	
+/*	
 	$("#goto_search").on('click', function() {
 		search_input.focus();
-        $('.simplebar-scroll-content').animate({
-			scrollTop: 0
-        }, 0);
-        $('#main').animate({
-			scrollTop: 0
-        }, 0);
 	});
+*/
 	search_input.focus(function() {
 		$('#footer').css("display","none");
 		$('#translate_list').css("display","none");
@@ -202,7 +197,7 @@ $(document).ready(function() {
 });
 </script>
 <div id="translate_list">
-	<span id="goto_search">جستجو</span><br/>
+	<a href="#data_table_filter" id="goto_search">جستجو</a><br/>
 	<span>دسته‎‌بندی لغات</span><br/>
 	<a href="#time">time</a><br/>
 	<a href="#days">days</a><br/>
