--- a/www/roze.html
+++ b/www/roze.html
@@ -130,17 +130,18 @@
 						<button class="dw_bottun translate">ترجمه</button>	
 					</div>
 				</div>
+
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/salame.mp3");' >گفتگوی امام و عمر سعد</li>
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/besmella.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/salame.mp3");' >شهادت غلام امام حسین علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/besmella.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/salame.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/besmella.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/salame.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();init_audio("audio/besmella.mp3");' >شهادت حضرت عباس علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >گفتگوی امام و عمر سعد</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت غلام امام حسین علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت حضرت عباس علیه السلام</li>
 						</ul>
 
 					</div>
