--- a/www/roze.html
+++ b/www/roze.html
@@ -134,14 +134,14 @@
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >گفتگوی امام و عمر سعد</li>
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت غلام امام حسین علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
-							<li onclick='$("#smgroup_audio_player").show();stopAudio();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت حضرت عباس علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >گفتگوی امام و عمر سعد</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت غلام امام حسین علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/salame.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/salame.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
+							<li onclick='$("#smgroup_audio_player").show();audio.stop();audio.release();init_audio("audio/besmella.mp3");play_btn.css("display","none");pause_btn.css("display","block");slider_Timer.prop("disabled",false);playAudio("audio/besmella.mp3");' >شهادت حضرت عباس علیه السلام</li>
 						</ul>
 
 					</div>
@@ -206,7 +206,8 @@
 		slider_Timer = $("#slider");
 		slider_range = slider_Timer;
 		
-		play_btn.click(function(){	
+		play_btn.click(function(){
+			e.preventDefault();
 			play_btn.css("display","none");
 			pause_btn.css("display","block");
 			slider_Timer.prop("disabled",false);
