--- a/www/roze.html
+++ b/www/roze.html
@@ -134,7 +134,7 @@
 
 <script>
 	function playAudio_new(filename) {
-		audio.stop();
+		playAudio(filename);
 		setTimeout(function(){
 			playAudio(filename);
 		}, 600);
@@ -241,17 +241,6 @@
 			stopAudio();
 		});
 		
-		
-		file = "audio/salame.mp3";
-		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-			file = "/android_asset/www/" + file;
-		}
-		audio = new Media(file, function(){ // success callback
-
-		}, function(error){ // error callback
-			//alert("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
-			console.log("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
-		});
 	}
 
 
