--- a/www/roze.html
+++ b/www/roze.html
@@ -29,7 +29,8 @@
 		}
 
 		function onDeviceReady() {
-
+			init_audio();
+			
 			//FastClick.attach(document.getElementById('container'));
 			FastClick.attach(document.body);
 			
@@ -134,7 +135,7 @@
 
 <script>
 	function playAudio_new(filename) {
-		playAudio(filename);
+		audio.stop();
 		setTimeout(function(){
 			playAudio(filename);
 		}, 600);
@@ -170,7 +171,7 @@
 </div>
 <script>
 	//init_audio("audio/salame.mp3");
-	init_audio();
+
 	audio_Timer = $("#audioTimer");
 	duration_Timer = $("#durationTimer");
 	slider_Timer = $("#slider");
@@ -241,6 +242,17 @@
 			stopAudio();
 		});
 		
+		
+		file = "audio/salame.mp3";
+		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
+			file = "/android_asset/www/" + file;
+		}
+		audio = new Media(file, function(){ // success callback
+
+		}, function(error){ // error callback
+			//alert("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
+			console.log("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
+		});
 	}
 
 
