--- a/www/roze.html
+++ b/www/roze.html
@@ -135,7 +135,7 @@
 
 <script>
 	function playAudio_new(filename) {
-		$("#durationTimer").html("00:00");
+		$("#durationTimer").html("--:--");
 		$("#audioTimer").html("00:00");
 		
 		audio.stop();
@@ -153,7 +153,7 @@
 		
 <div id="smgroup_audio_player" >
         <span id="audioTimer" >00:00</span>&nbsp 
-        <span id="durationTimer" >00:00</span>
+        <span id="durationTimer" >--:--</span>
         <div id="audioPosition" >
             <input type="range" name="slider" id="slider" disabled="disabled" value="0" min="0" max="60" style="padding:0;margin:0;" />
         </div>
