--- a/www/index.html
+++ b/www/index.html
@@ -25,17 +25,37 @@
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
 			document.addEventListener("deviceready", onDeviceReady, false);
-			
 			$("#slides").slidesjs({
 				width: 400,
-				height: 400,
+				//height: 400,
 				navigation: {
-					active: false
+					active: true,
+					effect: "slide",//"slide"fade
 				},
 				pagination: {
-					active: true
+					active: true,
+					effect: "slide",//"slide"fade
 				},
-				play: { auto: false}
+				effect: {
+					fade: {
+						speed: 800
+					}
+				},
+				play: { auto: false},
+				callback: {
+					loaded: function(number) {
+						// Do something awesome!
+						// Passes start slide number
+					},
+					start: function(number) {
+						// Do something awesome!
+						// Passes slide number at start of animation
+					},
+					complete: function(number) {
+						// Do something awesome!
+						// Passes slide number at end of animation
+					}
+				}
 			});
 			//onDeviceReady();
 		}
@@ -226,10 +246,10 @@
 		};
 		
 		function loadcompeleted() {
-			$(".mypreload").html("");
+			//$(".mypreload").html("");
 		}
 		$(window).load(function() {
-			$(".mypreload").html("");
+			//$(".mypreload").html("");
 		});
 
 		function go_back_index() {
@@ -267,15 +287,105 @@
 		
 		
 </head>
-<body onload="init();" style="background-color:#000000;text-align:center;">
+<body onload="init();" style="background-color:#cfcfcf;text-align:center;overflow:hidden;width:100%;">
 		<div class="container " id="container" >
 			<div id="ajax" class="mypreload">
 				<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
 				<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader.gif"></div>
 				<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading.png" width="70%"></div>
 			</div>
+<script>
+$(document).ready(function() {
+	$(".slide_navigator").css("top",$(window).height() - 110);
+	$(".slide_navigatorssssss").click(function(e) {
+		//alert();
+		e.preventDefault();
+		//a.stop(!0);
+		return a.next(a.options.navigation.effect)
+	});
+});
+</script>
+<style>
+/*
+#slides,.slidesjs-container{
+  overflow-x: visible !important;
+  overflow-y: auto !important;
+}
+*/
 
+</style>
+<!--
+قبل سفر:
+	پیشینه
+	فضیلت زیارت
+	کوله پشتی
+	آداب و احکام
+	مومنانه
+
+در سفر:
+	اخبار مرز
+	نقشه
+	زیارات
+		روضه
+	بعثت خون
+	بی خواص
+	شاعرانه
+	حسینیه
+	لغات پرکاربرد
+	
+	نائب الزیاره
+-->
 			<div id="slides">
+				<div class="silde_frame slide5th" >
+					<img src="images/slider/gh05.jpg" style="width:100%;" onclick="window.location.href='audio.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">پیشینه <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">مومنانه</div>
+						<div class="slide_navigator_previous slidesjs-previous">آداب و احکام <img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
+				<div class="silde_frame slide1th" >
+					<img src="images/slider/gh01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">فضیلت زیارت <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">پیشینه</div>
+						<div class="slide_navigator_previous slidesjs-previous">مومنانه <img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
+				<div class="silde_frame slide2th" >
+					<img src="images/slider/gh02.jpg" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">کوله پشتی <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">فضیلت زیارت</div>
+						<div class="slide_navigator_previous slidesjs-previous">پیشینه <img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
+				<div class="silde_frame slide3th" >
+					<img src="images/slider/gh03.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">آداب و احکام <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">کوله پشتی</div>
+						<div class="slide_navigator_previous slidesjs-previous">فضیلت زیارت <img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
+				<div class="silde_frame slide4th" >
+					<img src="images/slider/gh04.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">آداب و احکام</div>
+						<div class="slide_navigator_previous slidesjs-previous">کوله پشتی <img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
+				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
+				<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
+			</div>
+		</div>
+<!--
 				<img src="images/slider/01.png" onclick="window.location.href='map.html';" />
 				<img src="images/slider/02.png" onclick="window.location.href='ziyarat-ashura.html';" />
 				<img src="images/slider/03.png" onclick="window.location.href='roze.html';" />
@@ -283,9 +393,6 @@
 				<img src="images/slider/05.png" onclick="window.location.href='audio.html';" />
 				<img src="images/slider/06.png" />
 				<img src="images/slider/07.png" />
-				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
-				<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
-			</div>
-		</div>
+-->
 </body>
 </html>
