--- a/www/arabic.html
+++ b/www/arabic.html
@@ -36,7 +36,7 @@
 			FastClick.attach(document.body);
 			
 			if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-				document.addEventListener("backbutton", go_back, false);
+				document.addEventListener("backbutton", go_back_to_index, false);
 			}
 		
 		}
