--- a/www/ghable_safar.html
+++ b/www/ghable_safar.html
@@ -37,7 +37,7 @@
 				},
 				effect: {
 					fade: {
-						speed: 800
+						speed: 600
 					}
 				},
 				play: { auto: false},
@@ -100,7 +100,14 @@
 			$(".slide_navigator").css("top",$(window).height() - 110);
 		});
 	</script>	
-
+<style>
+#container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+</style>
 		
 		
 		
