--- a/www/map.html
+++ b/www/map.html
@@ -309,6 +309,20 @@ L.marker([32.6171,44.0362], {icon: ziyarati_icon}).bindPopup('حرم مطهر ا
 L.marker([32.6163,44.0322], {icon: ziyarati_icon}).bindPopup('حرم مطهر حضرت اباالفضل علیه السلام').addTo(ziyarati),
 L.marker([32.6510,43.9850], {icon: ziyarati_icon}).bindPopup('مرقد حر بن یزید ریاحی').addTo(ziyarati),
 L.marker([31.9958,44.3146], {icon: ziyarati_icon}).bindPopup('حرم مطهر امیرالمونین علیه السلام').addTo(ziyarati);
+L.marker([32.0288724,44.4008203], {icon: ziyarati_icon}).bindPopup('مسجد کوفه').addTo(ziyarati);
+L.marker([32.02645113,44.3948918], {icon: ziyarati_icon}).bindPopup('مرقد میثم تمار').addTo(ziyarati);
+L.marker([32.03892129,44.37993155], {icon: ziyarati_icon}).bindPopup('مسجد سهله').addTo(ziyarati);
+L.marker([32.00680564,44.33875302], {icon: ziyarati_icon}).bindPopup('مرقد کمیل').addTo(ziyarati);
+L.marker([32.0048148,44.33475735], {icon: ziyarati_icon}).bindPopup('مسجد حنانه').addTo(ziyarati);
+L.marker([32.00001671,44.3323294], {icon: ziyarati_icon}).bindPopup('مرقد آیت الله حکیم').addTo(ziyarati);
+L.marker([31.99565193,44.30934614], {icon: ziyarati_icon}).bindPopup('صافی صفا').addTo(ziyarati);
+L.marker([31.99997219,44.31655901], {icon: ziyarati_icon}).bindPopup('مرقد هود و صالح').addTo(ziyarati);
+L.marker([32.00029956,44.31497449], {icon: ziyarati_icon}).bindPopup('مرقد آیت الله قاضی').addTo(ziyarati);
+L.marker([32.001879,44.31273779], {icon: ziyarati_icon}).bindPopup('مقام امام زمان').addTo(ziyarati);
+L.marker([32.61596931,44.03122651], {icon: ziyarati_icon}).bindPopup('تل زینبیه').addTo(ziyarati);
+L.marker([32.61445311,44.03079782], {icon: ziyarati_icon}).bindPopup('خیمه گاه').addTo(ziyarati);
+L.marker([32.62218719,44.03511867], {icon: ziyarati_icon}).bindPopup('مقام امام زمان').addTo(ziyarati);
+L.marker([33.38026985,44.33819831], {icon: ziyarati_icon}).bindPopup('حرم مطهر امام موسی کاظم و امام جواد علیهما السلام').addTo(ziyarati);
 ////////////////////////////////////////////////////////////////////////////////////////////////		
 ////////////////////////////////////////////////////////////////////////////////////////////////
 //عمود ها///////////////////////////////////////////////////////////////////////////////////
