--- a/www/ghable_safar - Copy.html
+++ b/www/ghable_safar - Copy.html
@@ -37,7 +37,7 @@
 				},
 				effect: {
 					fade: {
-						speed: 600
+						speed: 800
 					}
 				},
 				play: { auto: false},
@@ -97,22 +97,10 @@
 		});
 		
 		$(document).ready(function() {
-			//$(".slide_navigator").css("top",$(window).height() - 110);
+			$(".slide_navigator").css("top",$(window).height() - 110);
 		});
 	</script>	
-<style>
-.silde_frame {
-    width: 100%;
-    text-align: center;
-    height: 100%;
-}
-#container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-</style>
+
 		
 		
 		
@@ -148,32 +136,50 @@
 	نائب الزیاره
 -->
 			<div id="slides">
-				<div class="silde_frame slide9th" >
-					<img src="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='audio.html';" />
+				<div class="silde_frame slide5th" >
+					<img src="images/slider/gh05.jpg" style="width:100%;" onclick="window.location.href='audio.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">پیشینه <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">مومنانه</div>
+						<div class="slide_navigator_previous slidesjs-previous">آداب و احکام <img src="images/slider/previous-btn.png"></div>
+					</div>
 				</div>
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/gh01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">فضیلت زیارت <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">پیشینه</div>
+						<div class="slide_navigator_previous slidesjs-previous">مومنانه <img src="images/slider/previous-btn.png"></div>
+					</div>
 				</div>
 				<div class="silde_frame slide2th" >
-					<img src="images/slider/h02.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/gh02.jpg" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">کوله پشتی <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">فضیلت زیارت</div>
+						<div class="slide_navigator_previous slidesjs-previous">پیشینه <img src="images/slider/previous-btn.png"></div>
+					</div>
 				</div>
 				<div class="silde_frame slide3th" >
-					<img src="images/slider/h03.jpg" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
+					<img src="images/slider/gh03.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">آداب و احکام <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">کوله پشتی</div>
+						<div class="slide_navigator_previous slidesjs-previous">فضیلت زیارت <img src="images/slider/previous-btn.png"></div>
+					</div>
 				</div>
 				<div class="silde_frame slide4th" >
-					<img src="images/slider/h04.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
-				</div>
-				<div class="silde_frame slide5th" >
-					<img src="images/slider/h05.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
-				</div>
-				<div class="silde_frame slide6th" >
-					<img src="images/slider/h06.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
-				</div>
-				<div class="silde_frame slide7th" >
-					<img src="images/slider/h07.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
-				</div>
-				<div class="silde_frame slide8th" >
-					<img src="images/slider/h08.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/gh04.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link">آداب و احکام</div>
+						<div class="slide_navigator_previous slidesjs-previous">کوله پشتی <img src="images/slider/previous-btn.png"></div>
+					</div>
 				</div>
 				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
 				<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
