--- a/www/ghable_safar - Copy.html
+++ b/www/ghable_safar - Copy.html
@@ -100,11 +100,14 @@
 			$(".slide_navigator").css("top",$(window).height() - 110);
 		});
 	</script>	
-
-		
-		
-		
-		
+	<style>
+		#container {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+		}
+	</style>	
 </head>
 <body onload="init();" style="background-color:#cfcfcf;text-align:center;overflow:hidden;width:100%;">
 		<div class="container " id="container" >
