--- a/www/ghable_safar.html
+++ b/www/ghable_safar.html
@@ -140,19 +140,19 @@
 -->
 			<div id="slides">
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/01.png" style="width:100%;" onclick="window.location.href='map.html';" />
 				</div>
 				<div class="silde_frame slide2th" >
-					<img src="images/slider/02.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/02.png" style="width:100%;" onclick="window.location.href='map.html';" />
 				</div>
 				<div class="silde_frame slide3th" >
-					<img src="images/slider/03.jpg" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
+					<img src="images/slider/03.png" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
 				</div>
 				<div class="silde_frame slide4th" >
-					<img src="images/slider/04.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
+					<img src="images/slider/04.png" style="width:100%;" onclick="window.location.href='roze.html';" />
 				</div>
 				<div class="silde_frame slide5th" >
-					<img src="images/slider/05.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/05.png" style="width:100%;" onclick="window.location.href='arabic.html';" />
 				</div>
 				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
 				<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
